# gesso

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: example-output.md  example-template.md  input.txt
src/gesso/: main.py  pp.py
src/paintings/: __init__.py  main.py  pp.py
tests/: test_main.py
