[project]
name = "paintings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]


[tool.pytest.ini_options]
pythonpath = .
testpaths = [tests]
minversion = 9.0
addopts = [-ra, -q, --cov, --cov-report=term-missing]
python_files = [test_*.py, *_test.py]

[tool.coverage.run]
source = [
    src
]
omit = [
    */__init__.py
]

[tool.coverage.report]
show_missing = true

